# chessvoicecontrol

./: .gitignore  distributed_computing.py  main.py  pyproject.toml  requirements.txt
data/CASTLE_KING_SIDE_KING_X_X_X_X_0_X/: mask.json  move.json
data/CASTLE_QUEEN_SIDE_KING_X_X_X_X_0_X/: move.json
data/PROMOTION_PAWN_A_SEVENTH_B_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_A_SEVENTH_B_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_B_SEVENTH_A_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_B_SEVENTH_A_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_B_SEVENTH_C_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_B_SEVENTH_C_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_C_SEVENTH_B_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_C_SEVENTH_B_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_C_SEVENTH_D_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_C_SEVENTH_D_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_D_SEVENTH_C_EIGHTTH_0_BISHOP/: move.json
data/PROMOTION_PAWN_D_SEVENTH_C_EIGHTTH_0_KNIGHT/: mask.json  move.json
data/PROMOTION_PAWN_D_SEVENTH_E_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_E_SEVENTH_D_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_E_SEVENTH_F_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_F_SEVENTH_E_EIGHTTH_0_KNIGHT/: move.json
data/PROMOTION_PAWN_F_SEVENTH_G_EIGHTTH_0_KNIGHT/: move.json
data_generation/: wav_writer.py
test_data_generation/: data_generator.py  datafiles_generator.py  json_generator.py  mask.py  moves_generator.py  transformer.py  transformer_test.py  wav_generator.py
(+77 files in other folders)
